# policyforge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.wheelcheck/: policyforge-0.1.0-py3-none-any.whl
docs/superpowers/plans/: 2026-04-22-plan-2a-integration-seams.md  2026-04-22-tool-fingerprint-pinning.md
docs/superpowers/specs/: 2026-04-22-agent-security-suite-design.md
examples/: basic_usage.py  foundry_agent_integration.py
policyforge/: __init__.py  audit.py  decorators.py  engine.py  loader.py  models.py
policyforge/policies/: default.yaml  hospitality_pii.yaml  tool_trust_example.yaml
policyforge/sync/: __init__.py  azure_blob.py  base.py  manager.py  oci_os.py  s3.py
policyforge/trust/: __init__.py  _normalize.py  ledger.py  manager.py  models.py  shadowing.py
tests/: test_audit.py  test_decorators.py  test_engine.py  test_engine_trust_integration.py  test_loader.py  test_models.py  test_sync_manager.py  test_sync_providers.py  test_trust_ledger.py  test_trust_manager.py  test_trust_models.py  test_trust_shadowing.py
