[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "policyforge"
version = "0.1.0"
description = "Local policy engine for AI agent tool-call gating with optional multi-cloud sync"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.28"]
azure = ["azure-storage-blob>=12.19"]
oci = ["oci>=2.112"]
all-clouds = ["boto3>=1.28", "azure-storage-blob>=12.19", "oci>=2.112"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
include = ["policyforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
